# gist-editor-ce

./: .gitignore  PLAN.md  README.md  pyproject.toml
src/gist_editor_ce/: auth.py  cli.py  config.py  editor.py  github_api.py  server.py
src/gist_editor_ce/static/: gistmd.css
src/gist_editor_ce/templates/: edit.html
tests/: test_basic.py  test_cli.py
