[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "gist-editor-ce"
version = "0.1.0"
description = "CLI+GUI Gist-focused Markdown editor"
authors = [{name="You", email="you@example.com"}]
requires-python = ">=3.10"
dependencies = [
  "typer[all]>=0.7.0",
  "requests>=2.28",
  "fastapi>=0.95",
  "uvicorn[standard]>=0.22",
  "Jinja2>=3.1",
  "Markdown>=3.4",
  "python-dotenv>=1.0",
  "toml>=0.10",
  "python-multipart>=0.0.9",
  "rich>=13.0"
]
[project.optional-dependencies]
dev = [
  "pytest>=7.0",
  "pytest-mock>=3.0",
  "pytest-cov>=4.0",
  "ruff>=0.1"
]
[project.scripts]
gist-editor-ce = "gist_editor_ce.cli:app"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
addopts = "-v --tb=short"

[tool.ruff]
line-length = 100
target-version = "py310"
